compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_private_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\ntype Zoo = Int\n\npub fn wibble(\n  x: String,\n) -> String {\n  \"ok\"\n}\n"
snapshot_kind: text
---
type Zoo = Int

pub fn wibble(
|  x: String,
) -> String {
  "ok"
}


----- Completion content -----
