compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_public_enum.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Direction {\n  Left\n  Right\n}\n"
snapshot_kind: text
---
|
pub type Direction {
  Left
  Right
}


----- Completion content -----
