compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_public_enum_with_documentation.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Direction {\n  /// Hello\n  Left\n  /// Goodbye\n  Right\n}\n"
snapshot_kind: text
---
|
pub type Direction {
  /// Hello
  Left
  /// Goodbye
  Right
}


----- Completion content -----
