compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_public_function_with_documentation.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n/// Hello\npub fn main() {\n  0\n}"
snapshot_kind: text
---
|
/// Hello
pub fn main() {
  0
}


----- Completion content -----
