compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_public_record.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Box {\n/// Hello\n  Box(Int, Int, Float)\n}\n"
snapshot_kind: text
---
|
pub type Box {
/// Hello
  Box(Int, Int, Float)
}


----- Completion content -----
