compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_public_record_with_documentation.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Box {\n  Box(Int, Int, Float)\n}\n"
snapshot_kind: text
---
|
pub type Box {
  Box(Int, Int, Float)
}


----- Completion content -----
