compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_variable.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main(wibble: Int) {\n  let wobble = 1\n  w\n\n  let wabble = 2\n}\n"
snapshot_kind: text
---
pub fn main(wibble: Int) {
  let wobble = 1
  w|

  let wabble = 2
}


----- Completion content -----
