compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_variable_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  let add_one = fn(wibble: Int) { wibble + 1 }\n  add_one(1)\n}\n"
snapshot_kind: text
---
pub fn main() {
  let add_one = fn(wibble: Int) { wibble| + 1 }
  add_one(1)
}


----- Completion content -----
