compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__local_variable_case_expression.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() {\n  case True {\n    True as wibble -> { todo }\n    False -> { todo }\n  }\n}\n"
snapshot_kind: text
---
pub fn main() {
  case True {
    True as wibble -> { t|odo }
    False -> { todo }
  }
}


----- Completion content -----
